Exercicio Cadastro DEV

--- a/JS DOM/Formulários/index.html
+++ b/JS DOM/Formulários/index.html
@@ -14,9 +14,9 @@
     <h2>Montar Pedido</h2>
 
     <form id="orderForm">
-      <label for="nome">Nome:</label>
+      <label for="name">Nome:</label>
       <br />
-      <input type="text" name="name" id="nome" />
+      <input type="text" name="name" id="name" />
       <br /><br />
 
       <label for="address">Endereço de Entrega:</label>
